# exochain

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AVC_MISSION_ECONOMICS_COMPACT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EXOCHAIN-FABRIC-PLATFORM.md  EXOCHAIN_AVC_Rust_PRD.md  EXOCHAIN_Custody_Native_Economy_Rust_PRD.md  GAP-REGISTRY.md  HONOR_GOOD_COMPACT.md  INTEGRATION.md  NIST_AI_RMF_MAPPING.toml  README.md  SECURITY.md  SUPPORT.md  TERMS-CONDITIONS-AND-PRIVACY.md  VERSIONING.md  deny.toml  docker-compose.ci.yml  docker-compose.multinode.yml  docker-compose.yml  init-db.sh  railway.json  rustfmt.toml  tarpaulin.toml
crates/decision-forum/: Cargo.toml
crates/decision-forum/docs/: audit-report-2026-03-15.md  bayesian-policy-spec.md
crates/decision-forum/src/: accountability.rs  advanced_policy.rs  authority.rs  authority_matrix.rs  cli.rs  constitution.rs  contestation.rs  decision.rs  decision_object.rs  emergency.rs  error.rs  fiduciary_package.rs  human_gate.rs  lib.rs  main.rs  metrics.rs  quorum.rs  requirements.rs  self_governance.rs  terms.rs  tnc_enforcer.rs  workflow.rs
crates/decision-forum/tests/: governance_kernel_integration.rs
crates/exo-api/: Cargo.toml
crates/exo-api/src/: dagdb.rs  error.rs  lib.rs  p2p.rs  schema.rs  types.rs
crates/exo-api/tests/: openapi_sync.rs  schema_test.rs
crates/exo-authority/: Cargo.toml
crates/exo-authority/src/: cache.rs  chain.rs  delegation.rs  error.rs  lib.rs  permission.rs
crates/exo-avc/: Cargo.toml
crates/exo-avc/src/: credential.rs  delegation.rs  error.rs  lib.rs  livesafe_public_output_ceremony.rs  llm_usage_receipt.rs  public_output_authorization.rs  receipt.rs  registry.rs  revocation.rs  validation.rs
crates/exo-avc/tests/: livesafe_public_output_ceremony_tests.rs
crates/exo-catapult/: Cargo.toml
crates/exo-catapult/src/: agent.rs  budget.rs  error.rs  franchise.rs  goal.rs  heartbeat.rs  integration.rs  lib.rs  newco.rs  oda.rs  phase.rs  receipt.rs
crates/exo-consensus/: Cargo.toml
crates/exo-consensus/proptest-regressions/: scoring.txt
crates/exo-consensus/src/: advocate.rs  commitment.rs  error.rs  lib.rs  mock_client.rs  panel.rs  providers.rs  record.rs  report.rs  round.rs  scoring.rs  session.rs
crates/exo-consensus/tests/: presidential_c2_bridge.rs
crates/exo-consent/: Cargo.toml
crates/exo-consent/src/: bailment.rs  contract.rs  error.rs  gatekeeper.rs  lib.rs  policy.rs
crates/exo-core/: Cargo.toml
crates/exo-core/src/: bcts.rs  crypto.rs  error.rs  event.rs  events.rs  hash.rs  hlc.rs  invariants.rs  lib.rs  types.rs
crates/exo-core/tests/: chain_of_custody.rs  cross_impl_hash_vectors.rs  integration.rs  ml_dsa_tests.rs
crates/exo-dag/: Cargo.toml
crates/exo-dag-db-core/: Cargo.toml
crates/exo-dag-db-core/src/: error.rs  hash.rs  lib.rs  metadata.rs  similarity.rs  tenant.rs
crates/exo-dag-db-domain/: Cargo.toml
crates/exo-dag-db-domain/src/: canonicalization.rs  context.rs  context_packet_persistence.rs  continuation_packet.rs  continuation_persistence.rs  council.rs  default_route.rs  export_finality.rs  graph.rs  intake.rs  lib.rs  lifecycle_action.rs  model.rs  placement.rs  route.rs  route_invalidation.rs  scoring.rs  state.rs  trust.rs  validation.rs  writeback.rs
crates/exo-dag-db-domain/tests/: continuation_packet_contract.rs  prd17_default_retrieval_contract.rs  prd17_export_finality_contract.rs  prd17_lifecycle_concurrency.rs  prd17_lifecycle_contract.rs
crates/exo-dag-db-exchange/: Cargo.toml
crates/exo-dag-db-exchange/src/: import_drift_repair.rs  kg_export.rs  kg_import.rs  kg_writeback.rs  kg_writeback_hygiene.rs  lib.rs
crates/exo-dag-db-exchange/tests/: kg_import_export_round_trip_contract.rs  m46_unified_memory_contract.rs  prd17_source_adapter_contract.rs  unified_memory_persistence_contract.rs
crates/exo-dag-db-graph/: Cargo.toml
crates/exo-dag-db-graph/src/: layer_creation_policy.rs  layered_graph.rs  layered_hygiene.rs  layered_placement.rs  lib.rs
crates/exo-dag-db-lab/: Cargo.toml
crates/exo-dag-db-lab/benches/: concurrency.rs  packet_pipeline.rs  scale_curve.rs
crates/exo-dag-db-lab/src/: benchmark.rs  benchmark_isolation.rs  browser.rs  diagnostics.rs  graph_explorer.rs  graph_explorer_postgres.rs  graph_refinement.rs  kg_markdown_manifest.rs  layered_backfill.rs  lib.rs  optimization.rs
crates/exo-dag-db-lab/tests/: benchmark_isolation.rs  graph_explorer_postgres_export.rs
crates/exo-dag-db-postgres/: Cargo.toml
crates/exo-dag-db-postgres/migrations/: 20260505000001_create_dagdb_schema.sql  20260505000002_create_dagdb_graph_schema.sql  20260511000001_create_dagdb_export_persistence_schema.sql  20260511000002_create_dagdb_export_finality_outbox_schema.sql  20260602000001_create_dagdb_graph_edge_tombstones.sql  20260602000002_create_dagdb_layered_graph_schema.sql  20260607000001_create_prd17_default_route_schema.sql  20260607000002_create_prd17_context_packet_schema.sql  20260607000003_create_prd17_lifecycle_schema.sql  20260612000001_create_dagdb_telemetry_facet_node_type.sql  20260612000002_add_dagdb_graph_layers_aggregate_summary.sql  20260612000003_add_dagdb_memory_deep_detail_summary.sql  20260619000001_enable_dagdb_tenant_rls.sql  20260620000001_add_dagdb_operational_receipt_event_types.sql  20260623000001_create_root_bundle_receipt_schema.sql  20260623000002_create_dagdb_node_store_schema.sql  20260623000003_create_zerodentity_record_schema.sql  20260623000004_create_gateway_state_records_schema.sql  (+2 more)
crates/exo-dag-db-retrieval/: Cargo.toml
crates/exo-economy/: Cargo.toml
crates/exo-escalation/: Cargo.toml
crates/exo-gatekeeper/: Cargo.toml
crates/exo-gateway/: Cargo.toml
crates/exo-governance/: Cargo.toml
crates/exo-identity/: Cargo.toml
crates/exo-legal/: Cargo.toml
crates/exo-messaging/: Cargo.toml
crates/exo-node/: Cargo.toml
crates/exo-proofs/: Cargo.toml  README.md
crates/exo-tenant/: Cargo.toml
crates/exochain-sdk/: Cargo.toml  README.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: clearance_policy_json.rs  did_parse.rs  signature_cbor.rs
(+2269 files in other folders)
