[workspace]
resolver = "2"
members = [
    "crates/exo-core",
    "crates/exo-identity",
    "crates/exo-consent",
    "crates/exo-authority",
    "crates/exo-gatekeeper",
    "crates/exo-governance",
    "crates/exo-escalation",
    "crates/exo-legal",
    "crates/exo-dag",
    "crates/exo-proofs",
    "crates/exo-api",
    "crates/exo-gateway",
    "crates/exo-tenant",
    "crates/decision-forum",
    "crates/exochain-wasm",
    "crates/exo-node",
    "crates/exo-catapult",
    "crates/exo-messaging",
]

[workspace.package]
version = "0.1.0-beta"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/exochain/exochain"

[workspace.dependencies]
# Deterministic serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"          # CBOR — canonical, deterministic

# Cryptography
blake3 = "1"
bs58 = "0.5"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
sha2 = "0.10"
hmac = "0.12"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
# Post-quantum cryptography — NIST FIPS 204 (ML-DSA / CRYSTALS-Dilithium)
# v0.1.0-rc.7 patches RUSTSEC-2025-0144 timing side-channel (fixed in rc.3+)
ml-dsa = { version = "0.1.0-rc.7", features = ["zeroize"] }

# Deterministic data structures
indexmap = { version = "2", features = ["serde"] }

# Async runtime (deterministic task ordering where possible)
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["json", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "macros", "migrate"] }

# Encoding
hex = "0.4"

# Async trait (used by DagStore)
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# GraphQL (exo-gateway API layer)
# Pinned to =7.0.17 — MSRV 1.86; 7.0.18+ bumped MSRV to 1.89; axum 0.7 compatible
async-graphql = { version = "=7.0.17", features = ["tokio"] }
async-graphql-axum = "=7.0.17"
async-stream = "0.3"

# Time (no std::time — use HLC only)
chrono = { version = "0.4", default-features = false, features = ["serde", "wasmbind", "clock"] }
getrandom = { version = "0.2", features = ["js"] }

# UUID for correlation IDs
uuid = { version = "1", features = ["v4", "serde", "js"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[workspace.lints.rust]
# DETERMINISM ENFORCEMENT — Constitutional requirement
unsafe_code = "deny"

[workspace.lints.clippy]
# Deny non-deterministic patterns
float_arithmetic = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
as_conversions = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
