[workspace]
resolver = "2"
members = [
    "crates/exo-core",
    "crates/exo-identity",
    "crates/exo-consent",
    "crates/exo-authority",
    "crates/exo-gatekeeper",
    "crates/exo-governance",
    "crates/exo-escalation",
    "crates/exo-legal",
    "crates/exo-dag",
    "crates/exo-proofs",
    "crates/exo-api",
    "crates/exo-gateway",
    "crates/exo-tenant",
    "crates/decision-forum",
    "crates/exochain-wasm",
    "crates/exo-node",
    "crates/exo-catapult",
    "crates/exo-messaging", "crates/exo-consensus",
    "crates/exochain-sdk",
    "crates/exo-avc",
    "crates/exo-economy",
]

[workspace.package]
version = "0.1.0-beta"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/exochain/exochain"

[workspace.dependencies]
# Deterministic serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
ciborium = "=0.2.2"          # CBOR — canonical, deterministic

# Cryptography
blake3 = "=1.8.2"
bs58 = "=0.5.1"
ed25519-dalek = { version = "=2.2.0", features = ["serde", "rand_core"] }
x25519-dalek = { version = "=2.0.1", features = ["serde", "static_secrets"] }
sha2 = "=0.10.9"
hmac = "=0.12.1"
chacha20poly1305 = "=0.10.1"
hkdf = "=0.12.4"
rand = "=0.8.6"
zeroize = { version = "=1.8.2", features = ["derive"] }
# Post-quantum cryptography — NIST FIPS 204 (ML-DSA / CRYSTALS-Dilithium)
# v0.1.0-rc.7 patches RUSTSEC-2025-0144 timing side-channel (fixed in rc.3+)
ml-dsa = { version = "=0.1.0-rc.7", features = ["zeroize"] }

# Deterministic data structures
indexmap = { version = "=2.12.1", features = ["serde"] }

# Async runtime (deterministic task ordering where possible)
tokio = { version = "=1.50.0", features = ["full"] }

# HTTP server
axum = { version = "=0.7.9", features = ["json", "macros"] }
axum-server = { version = "=0.8.0", default-features = false }
rustls = { version = "=0.23.37", default-features = false, features = ["ring", "std", "tls12"] }
tower = { version = "=0.5.3", features = ["util", "limit"] }
tower-http = { version = "=0.6.8", features = ["trace", "cors"] }

# Database
sqlx = { version = "=0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "macros", "migrate"] }

# Encoding
hex = "=0.4.3"
percent-encoding = "=2.3.2"

# Async trait (used by DagStore)
async-trait = "=0.1.89"

# Error handling
thiserror = "=2.0.17"
anyhow = "=1.0.100"

# Logging / tracing
tracing = "=0.1.43"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "json"] }

# GraphQL (exo-gateway API layer)
# Pinned to =7.0.17 — MSRV 1.86; 7.0.18+ bumped MSRV to 1.89; axum 0.7 compatible
async-graphql = { version = "=7.0.17", features = ["tokio"] }
async-graphql-axum = "=7.0.17"
async-stream = "=0.3.6"

# Time (no std::time — use HLC only)
chrono = { version = "=0.4.44", default-features = false, features = ["serde", "wasmbind", "clock"] }
getrandom = { version = "=0.2.16", features = ["js"] }

# UUID for correlation IDs
uuid = { version = "=1.22.0", features = ["v4", "serde", "js"] }

# Testing
proptest = "=1.9.0"
criterion = { version = "=0.5.1", features = ["html_reports"] }
tokio-test = "=0.4.5"

[workspace.lints.rust]
# DETERMINISM ENFORCEMENT — Constitutional requirement
unsafe_code = "deny"

[workspace.lints.clippy]
# Deny non-deterministic patterns
float_arithmetic = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
as_conversions = "warn"
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true
