# Copyright 2026 Exochain Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
    "crates/exo-core",
    "crates/exo-identity",
    "crates/exo-consent",
    "crates/exo-authority",
    "crates/exo-gatekeeper",
    "crates/exo-governance",
    "crates/exo-escalation",
    "crates/exo-legal",
    "crates/exo-dag",
    "crates/exo-proofs",
    "crates/exo-api",
    "crates/exo-dag-db-api",
    "crates/exo-dag-db-core",
    "crates/exo-dag-db-graph",
    "crates/exo-dag-db-domain",
    "crates/exo-dag-db-retrieval",
    "crates/exo-dag-db-exchange",
    "crates/exo-dag-db-postgres",
    "crates/exo-dag-db-lab",
    "crates/exo-gateway",
    "crates/exo-tenant",
    "crates/decision-forum",
    "crates/exochain-wasm",
    "crates/exo-node",
    "crates/exo-catapult",
    "crates/exo-messaging", "crates/exo-consensus",
    "crates/exochain-sdk",
    "crates/exo-avc",
    "crates/exo-economy",
    "crates/exo-root",
]
# The livesafe/ subtree is a proprietary commercial application (see
# livesafe/LICENSE), not part of the Apache-2.0 Rust workspace. Its nested
# Cargo manifest is deliberately excluded so the constitutional cargo gates
# (build/test/clippy/deny/doc --workspace) never reach into it.
exclude = ["livesafe"]

[workspace.package]
version = "0.2.1-beta"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/exochain/exochain"
publish = true

[workspace.dependencies]
# Deterministic serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
ciborium = "=0.2.2"          # CBOR — canonical, deterministic

# Cryptography
blake3 = "=1.8.2"
bs58 = "=0.5.1"
ed25519-dalek = { version = "=2.2.0", features = ["serde", "rand_core"] }
x25519-dalek = { version = "=2.0.1", features = ["serde", "static_secrets"] }
sha2 = { version = "=0.10.9", features = ["oid"] }
hmac = "=0.12.1"
chacha20poly1305 = "=0.10.1"
hkdf = "=0.12.4"
rand = "=0.8.6"
zeroize = { version = "=1.8.2", features = ["derive"] }
frost-ristretto255 = { version = "=3.0.0", default-features = false, features = ["serde"] }
argon2 = { version = "=0.5.3", features = ["zeroize"] }
# Post-quantum cryptography — NIST FIPS 204 (ML-DSA / CRYSTALS-Dilithium)
# v0.1.0-rc.7 patches RUSTSEC-2025-0144 timing side-channel (fixed in rc.3+)
ml-dsa = { version = "=0.1.0-rc.7", features = ["zeroize"] }

# Deterministic data structures
indexmap = { version = "=2.12.1", features = ["serde"] }

# Async runtime (deterministic task ordering where possible)
tokio = { version = "=1.50.0", features = ["full"] }

# HTTP server
axum = { version = "=0.7.9", features = ["json", "macros"] }
axum-server = { version = "=0.8.0", default-features = false }
rustls = { version = "=0.23.37", default-features = false, features = ["ring", "std", "tls12"] }
tower = { version = "=0.5.3", features = ["util", "limit"] }
tower-http = { version = "=0.6.8", features = ["trace", "cors"] }

# Database
sqlx = { version = "=0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "macros", "migrate"] }

# Encoding
hex = "=0.4.3"
percent-encoding = "=2.3.2"

# Async trait (used by DagStore)
async-trait = "=0.1.89"

# Error handling
thiserror = "=2.0.17"
anyhow = "=1.0.103"

# Logging / tracing
tracing = "=0.1.43"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "json"] }

# GraphQL (exo-gateway API layer)
# Pinned to =7.0.17 — MSRV 1.86; 7.0.18+ bumped MSRV to 1.89; axum 0.7 compatible
async-graphql = { version = "=7.0.17", features = ["tokio"] }
async-graphql-axum = "=7.0.17"
async-stream = "=0.3.6"

# Time (no std::time — use HLC only)
chrono = { version = "=0.4.44", default-features = false, features = ["serde", "wasmbind", "clock"] }
getrandom = { version = "=0.2.16", features = ["js"] }

# UUID for correlation IDs
uuid = { version = "=1.22.0", features = ["v4", "serde", "js"] }

# Testing
proptest = "=1.9.0"
criterion = { version = "=0.5.1", features = ["html_reports"] }
tokio-test = "=0.4.5"

[workspace.lints.rust]
# DETERMINISM ENFORCEMENT — Constitutional requirement
unsafe_code = "deny"

[workspace.lints.clippy]
# Deny non-deterministic patterns
float_arithmetic = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
as_conversions = "warn"
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true
