[package]
name = "decision-forum"
description = "EXOCHAIN constitutional trust fabric — decision objects, constitutional enforcement, T&C, CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
exo-core = { path = "../exo-core" }
exo-identity = { path = "../exo-identity" }
exo-governance = { path = "../exo-governance" }
exo-gatekeeper = { path = "../exo-gatekeeper" }
serde = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
