[package]
name = "exo-api"
description = "EXOCHAIN constitutional trust fabric — P2P networking and external API types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
exo-core = { path = "../exo-core" }
exo-identity = { path = "../exo-identity" }
serde = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
ciborium = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["exo-identity"]
