# Copyright 2026 Exochain Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "exochain-api"
description = "EXOCHAIN constitutional trust fabric — P2P networking and external API types"
documentation = "https://docs.rs/exochain-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "exo_api"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.2" }
exo-dag-db-api = { package = "exochain-dag-db-api", path = "../exo-dag-db-api", version = "=0.2.2" }
exo-identity = { package = "exochain-identity", path = "../exo-identity", version = "=0.2.2" }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
ciborium = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
jsonschema = { version = "0.19", default-features = false }

[package.metadata.cargo-machete]
ignored = ["exo-identity"]
