[package]
name = "exo-authority"
description = "EXOCHAIN authority chain verification and delegation management"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
exo-core = { path = "../exo-core" }
exo-identity = { path = "../exo-identity" }
serde = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["blake3", "ed25519-dalek", "exo-identity"]
