[package]
name = "exo-avc"
description = "EXOCHAIN Autonomous Volition Credential — portable signed credential for autonomous agent intent, authority, constraints, delegation, revocation, and trust receipts"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
exo-core = { path = "../exo-core" }
exo-authority = { path = "../exo-authority" }
serde = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
