[package]
name = "exo-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
anthropic = []
openai = []
google = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
blake3.workspace = true

# Local
exo-core = { path = "../exo-core" }
exo-legal = { path = "../exo-legal" }
decision-forum = { path = "../decision-forum" }

[lints]
workspace = true
