[package]
name = "exo-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
anthropic = []
openai = []
google = []

[dependencies]
serde.workspace = true
thiserror = "1"

# Local
exo-core = { path = "../exo-core" }
decision-forum = { path = "../decision-forum" }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
