[package]
name = "exo-consent"
description = "EXOCHAIN bailment-conditioned consent enforcement — no action without consent"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
exo-core = { path = "../exo-core" }
serde = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
ciborium = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["blake3"]
