[package]
name = "exo-core"
description = "EXOCHAIN constitutional trust fabric — foundational deterministic types, HLC, crypto, BCTS state machine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
ciborium = { workspace = true }
zeroize = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
