[package]
name = "exo-core"
description = "EXOCHAIN constitutional trust fabric — foundational deterministic types, HLC, crypto, BCTS state machine"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
ciborium = { workspace = true }
zeroize = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }
ml-dsa = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }

[package.metadata.cargo-machete]
# Pre-existing deps used via re-exports for downstream crates.
ignored = ["chrono", "indexmap"]
