[package]
name = "exo-dag-db-core"
description = "EXOCHAIN DAG DB deterministic primitives and shared validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
exo-dag-db-api = { path = "../exo-dag-db-api" }
exo-core = { path = "../exo-core" }
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
