[package]
name = "exochain-dag-db-core"
description = "EXOCHAIN DAG DB deterministic primitives and shared validation"
documentation = "https://docs.rs/exochain-dag-db-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "exo_dag_db_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
exo-dag-db-api = { package = "exochain-dag-db-api", path = "../exo-dag-db-api", version = "=0.2.3" }
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.3" }
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
