[package]
name = "exochain-dag-db-domain"
description = "EXOCHAIN DAG DB governed domain services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "exo_dag_db_domain"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
exo-dag-db-api = { package = "exochain-dag-db-api", path = "../exo-dag-db-api", version = "=0.2.0-beta" }
exo-authority = { package = "exochain-authority", path = "../exo-authority", version = "=0.2.0-beta" }
exo-avc = { package = "exochain-avc", path = "../exo-avc", version = "=0.2.0-beta" }
exo-consent = { package = "exochain-consent", path = "../exo-consent", version = "=0.2.0-beta" }
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.0-beta" }
exo-dag-db-core = { package = "exochain-dag-db-core", path = "../exo-dag-db-core", version = "=0.2.0-beta" }
exo-dag-db-graph = { package = "exochain-dag-db-graph", path = "../exo-dag-db-graph", version = "=0.2.0-beta" }
exo-identity = { package = "exochain-identity", path = "../exo-identity", version = "=0.2.0-beta" }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
