[package]
name = "exochain-dag-db-exchange"
description = "EXOCHAIN DAG DB import, export, and writeback contracts"
documentation = "https://docs.rs/exochain-dag-db-exchange"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "exo_dag_db_exchange"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
exo-dag-db-api = { package = "exochain-dag-db-api", path = "../exo-dag-db-api", version = "=0.2.3" }
exo-authority = { package = "exochain-authority", path = "../exo-authority", version = "=0.2.3" }
exo-avc = { package = "exochain-avc", path = "../exo-avc", version = "=0.2.3" }
exo-consent = { package = "exochain-consent", path = "../exo-consent", version = "=0.2.3" }
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.3" }
exo-dag-db-core = { package = "exochain-dag-db-core", path = "../exo-dag-db-core", version = "=0.2.3" }
exo-dag-db-domain = { package = "exochain-dag-db-domain", path = "../exo-dag-db-domain", version = "=0.2.3" }
exo-dag-db-graph = { package = "exochain-dag-db-graph", path = "../exo-dag-db-graph", version = "=0.2.3" }
exo-dag-db-retrieval = { package = "exochain-dag-db-retrieval", path = "../exo-dag-db-retrieval", version = "=0.2.3" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
