[package]
name = "exo-dag-db-graph"
description = "EXOCHAIN DAG DB graph and layered organization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
exo-dag-db-api = { path = "../exo-dag-db-api" }
exo-core = { path = "../exo-core" }
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
