[package]
name = "exochain-dag-db-graph"
description = "EXOCHAIN DAG DB graph and layered organization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "exo_dag_db_graph"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
exo-dag-db-api = { package = "exochain-dag-db-api", path = "../exo-dag-db-api", version = "=0.2.0-beta" }
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.0-beta" }
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
